# Clotex_api

./: .gitignore  Pipeline_inference.ipynb  README.md
.devcontainer/: devcontainer.json
backend/: main.py  pyproject.toml
backend/src/api/: health.py  image.py
backend/src/core/: __init__.py  anchor.py  classify.py  convertor.py  layer_builder.py  mask_image.py  preprocess.py  upscaler.py
backend/src/schemas/: endpoint.py
backend/src/utils/: __init__.py  debug.py  files.py  logger.py  memory.py
frontend/: index.html  script.js  styles.css
